<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/red" >
    
    <TextView 
        android:id="@+id/setpswd_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="5dp"
        android:text="@string/set_popwindow_setpswd"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"/>
      
    <TextView 
        android:id="@+id/update_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:text="@string/set_popwindow_update"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"/>
         
        
    <TextView 
        android:id="@+id/exit_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:text="@string/set_popwindow_exit"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"/>

</LinearLayout>
